# all-in-one-ARR

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  Bandwidth-Controllarr_claude.md  Dockerfile  README.md  analysis.md  dev.sh  docker-compose.build.yml  docker-compose.yml  eren code_review.md  ern_p_code.md  ern_plan_cl.md  i_plan_request_codex.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
backend/: main.py  pyproject.toml  test_download_clients.py
backend/core/: __init__.py  anime_ids.py  anime_ids_sync.py  anime_seasons.py  api.py  app.py  app_metrics.py  bandwidth_api.py  bandwidth_metrics.py  bandwidth_types.py  config.py  context.py  db.py  db_schema.py  deletarr_api.py  findarr_api.py  logging.py  posters.py  registry.py  scheduler.py  service_registry.py  services_api.py  settings_normalisers.py  settings_store.py  status_checker.py  tasks.py  timefmt.py  trakt_api.py  trakt_auth.py  trakt_url.py  trending.py  trending_api.py  trending_sync.py  webhooks.py
backend/core/clients/: anilist.py  arr.py  arr_client.py  jellyseerr.py  omdb.py  qbittorrent.py  sabnzbd.py  seer.py  servarr.py  tmdb.py  trakt.py
backend/modules/: __init__.py
backend/modules/bandwidth_controllarr/: __init__.py  control.py
backend/modules/deletarr/: __init__.py  arr_source.py  engine.py  manifest.py  models.py  patterns.py  scanner.py
backend/modules/findarr/: __init__.py  client.py  engine.py  grouping.py  models.py  radarr.py  sonarr.py
backend/modules/list_syncarr/: __init__.py  manual.py  reconcile.py  removal.py  sync.py  webhook.py
backend/modules/traktsync/: sync.py  webhook.py
backend/tests/: conftest.py  test_anilist.py  test_anime_ids.py  test_anime_ids_sync.py  test_anime_seasons.py  test_api.py  test_app.py  test_arr_client.py  test_bandwidth_api.py  test_bandwidth_control.py  test_config.py  test_context.py  test_db.py  test_deletarr_api.py  test_deletarr_arr_scanner.py  test_deletarr_arr_source.py  test_deletarr_engine.py  test_deletarr_manifest.py  test_deletarr_patterns.py  test_deletarr_scanner.py  test_findarr_api.py  test_findarr_client.py  test_findarr_db.py  test_findarr_engine.py  test_findarr_grouping.py  test_findarr_normalisers.py  test_findarr_settings.py  test_jellyseerr.py  test_list_syncarr_reconcile.py  test_list_syncarr_removal.py  test_list_syncarr_setup.py  test_list_syncarr_sync.py  test_list_syncarr_webhook.py  test_logging.py  test_main.py  test_metrics.py  test_omdb.py  test_posters.py  test_qbittorrent.py  test_registry.py  (+19 more)
core/: api.py  config.py  context.py  db.py  registry.py  scheduler.py
core/clients/: __init__.py  jellyseerr.py  trakt.py
frontend/: .npmrc  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  index.test.ts  main.tsx  vite-env.d.ts
frontend/src/components/: dry-run-switch.tsx  integration-status-card.test.tsx  integration-status-card.tsx  mode-toggle.test.tsx  mode-toggle.tsx  theme-provider.test.tsx
frontend/src/components/layout/: AppShell.test.tsx  AppShell.tsx  Topbar.test.tsx  Topbar.tsx  nav-config.tsx
frontend/src/components/ui/: button.tsx  input.tsx  select.tsx  sonner.test.tsx  sonner.tsx  tabs.tsx  ui-primitives.test.tsx
frontend/src/features/bandwidth-controllarr/: BandwidthControllarr.test.tsx  BandwidthControllarr.tsx  bandwidth-controllarr-tab.ts
frontend/src/features/bandwidth-controllarr/components/: client-card.test.tsx  client-card.tsx  download-activity-panel.test.tsx  download-activity-panel.tsx  download-format.test.ts  download-format.ts  download-rows.tsx  download-test-fixtures.ts  queue-group.test.tsx  queue-group.tsx
frontend/src/features/bandwidth-controllarr/tabs/: BandwidthSettings.test.tsx  BandwidthSettings.tsx  Status.test.tsx  Status.tsx
frontend/src/features/dashboard/: Dashboard.test.tsx  Dashboard.tsx
frontend/src/features/deletarr/: Deletarr.test.tsx  Deletarr.tsx  deletarr-tab.ts  result-groups.ts
frontend/src/features/findarr/: Findarr.test.tsx  Findarr.tsx  findarr-tab.ts
frontend/src/features/list-syncarr/: ListSyncarr.test.tsx  ListSyncarr.tsx  list-syncarr-tab.ts
frontend/src/features/settings/: Settings.test.tsx  Settings.tsx  settings-tab.ts
frontend/src/features/trending/: Trending.test.tsx  Trending.tsx  trending-item-status.ts  trending-tab.ts  useDebouncedValue.test.ts  useDebouncedValue.ts  usePosterReveal.ts
frontend/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  queries.test.tsx  queries.ts  services.ts  theme-options.ts  utils.test.ts
frontend/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Items.test.tsx  Items.tsx  Lists.test.tsx  Lists.tsx  Settings.test.tsx  Settings.tsx
frontend/src/shared/components/: brand-logo.tsx  connection-badge.test.tsx  connection-badge.tsx  dry-run-switch.tsx  mode-toggle.test.tsx  mode-toggle.tsx  settings-help.test.tsx  settings-help.tsx  theme-context.ts  theme-provider.test.tsx  theme-provider.tsx
frontend/src/shared/layout/: AppShell.test.tsx  AppShell.tsx  Topbar.test.tsx  Topbar.tsx  nav-config.tsx  sidebar-state.ts
frontend/src/shared/lib/: api.test.ts  api.ts  format.test.ts  format.ts  queries.bandwidth.test.tsx  queries.dashboard.test.tsx  queries.deletarr.test.tsx  queries.findarr.test.tsx  queries.list-syncarr.test.tsx  queries.settings.test.tsx  queries.test.tsx  queries.trending.test.tsx  queries.ts  services.ts  storage.test.ts  storage.ts  theme-options.ts  utils.test.ts  version.ts
frontend/src/shared/test/: mock-query.ts  query-provider.tsx  setup.ts  tooltip.ts
frontend/src/test/: mock-query.ts  setup.ts
modules/: __init__.py
modules/traktsync/: __init__.py  reconcile.py
schema/: openapi.json
scripts/: check.sh  export_openapi.py  python_venv.sh  release.sh
tests/: conftest.py  test_api.py  test_arr.py  test_config.py  test_logging.py  test_main.py  test_trakt.py  test_traktsync_setup.py  test_traktsync_webhook.py  test_webhooks.py
(+103 files in other folders)
