[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-arr"
version = "0.1.0"
description = "All-in-One ARR: a plugin core with a traktsync module that keeps a Trakt list in sync with Jellyseerr and removes items once imported by Radarr/Sonarr."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eren Atbas" }]

dependencies = [
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "apscheduler>=4.0.0a5,<5.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "respx>=0.21,<1.0",
]

[tool.setuptools]
# The application is laid out as top-level packages at the repository root
# (the brief's "aio-arr/" project root maps onto the repository itself; a
# hyphenated package name is not importable, so core/ and modules/ live here).
packages = ["core", "core.clients", "modules", "modules.traktsync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=core --cov=modules --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["core", "modules"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
