[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-arr"
version = "0.1.0"
description = "All-in-One ARR: a plugin core with a traktsync module that keeps a Trakt list in sync with Jellyseerr and removes items once imported by Radarr/Sonarr."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eren Atbas" }]

dependencies = [
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "apscheduler>=4.0.0a5,<5.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=7.0,<8.0",
    "respx>=0.21,<1.0",
]

[tool.setuptools]
# The backend is laid out as top-level packages inside backend/ (this file's
# directory); a hyphenated distribution name is not importable, so the code is
# exposed as the core/ and modules/ packages rather than an aio_arr/ package.
packages = ["core", "core.clients", "modules", "modules.traktsync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# pytest-asyncio 1.x: pin the default fixture loop scope explicitly to silence
# the unset-default deprecation warning (the suite has no custom event_loop).
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=core --cov=modules --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["core", "modules"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
