[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-arr"
version = "1.8.3"
description = "All-in-One ARR: a plugin core with a list_syncarr module that keeps a Trakt list in sync with Seer and removes items from the Trakt list once they are available or partially available in Seer."
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Eren Atbas" }]

dependencies = [
    "fastapi>=0.118,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    # Pinned to the tested pre-release floor: 4.0 has no stable/beta release yet, so
    # document the exact known-good alpha rather than allowing an untested a5.
    "apscheduler>=4.0.0a6,<5.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "prometheus-client>=0.25,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=7.0,<8.0",
    "respx>=0.21,<1.0",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<3.0",
]

[tool.setuptools]
# The backend is laid out as top-level packages inside backend/ (this file's
# directory); a hyphenated distribution name is not importable, so the code is
# exposed as the core/ and modules/ packages rather than an aio_arr/ package.
packages = [
    "core",
    "core.clients",
    "modules",
    "modules.list_syncarr",
    "modules.bandwidth_controllarr",
    "modules.findarr",
    "modules.deletarr",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# pytest-asyncio 1.x: pin the default fixture loop scope explicitly to silence
# the unset-default deprecation warning (the suite has no custom event_loop).
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=core --cov=modules --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["core", "modules"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors/warnings (E/W), isort (I), pyupgrade (UP),
# and flake8-bugbear (B). E501 is delegated to the formatter, which owns code
# width; enforcing it in the linter only flags long comments, strings, and URLs
# that the formatter deliberately leaves untouched.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Mirror the package layout declared in [tool.setuptools].
known-first-party = ["core", "modules"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter/dependency markers are evaluated once at import time and
# are the idiomatic way to declare route defaults, so exempt them from B008
# (function-call-in-default-argument).
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.ruff.format]
# Black-compatible defaults; this section pins the behaviour for future changes.
docstring-code-format = false

[tool.mypy]
python_version = "3.14"
files = ["core", "modules"]
# Pydantic v2 ships a mypy plugin that teaches mypy about model fields,
# validators, and constructor signatures.
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
# Start lenient: third-party packages without shipped stubs should not block the
# gate. Tighten module-by-module (e.g. disallow_untyped_defs) in follow-ups.
ignore_missing_imports = true
